lab 4/k8s_v1/client/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
     labels:
       app: client
    spec:
      containers:
        - image: dmirina/microservices-client:3.2
          imagePullPolicy: "IfNotPresent"
          name: client
          ports:
            - containerPort: 80
